--- a/app/src/main/res/layout/snackbar_custom.xml
+++ b/app/src/main/res/layout/snackbar_custom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -14,33 +14,33 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/shape_gray400_fill_99_rect"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/shape_gray400_fill_8_rect">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/iv_snackbar_custom_check"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_check"
                 android:layout_marginStart="19dp"
+                android:src="@drawable/ic_check"
+                app:layout_constraintBottom_toBottomOf="@id/tv_snackbar_custom_content"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/tv_snackbar_custom_content"
-                app:layout_constraintBottom_toBottomOf="@id/tv_snackbar_custom_content" />
+                app:layout_constraintTop_toTopOf="@id/tv_snackbar_custom_content" />
 
             <TextView
                 android:id="@+id/tv_snackbar_custom_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
                 android:layout_marginVertical="17dp"
-                android:textAppearance="@style/body3"
+                android:layout_marginStart="8dp"
+                android:textAppearance="@style/body2"
                 android:textColor="@color/gray0"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/iv_snackbar_custom_check"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:text="데일리 루틴을 1개 삭제했어요" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
