#176 [ui] 루틴 추가 로직 작성

--- a/app/src/main/res/layout/activity_add_list.xml
+++ b/app/src/main/res/layout/activity_add_list.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.sopetit.softie.ui.addroutine.list.AddListViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
