--- a/app/src/main/res/layout/activity_add_list.xml
+++ b/app/src/main/res/layout/activity_add_list.xml
@@ -67,8 +67,8 @@
             android:layout_marginEnd="20dp"
             android:padding="9dp"
             android:src="@drawable/ic_maker_help"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/iv_add_list_maker_chip"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/iv_add_list_maker_chip" />
 
         <androidx.viewpager2.widget.ViewPager2
@@ -92,12 +92,12 @@
             android:layout_marginBottom="8dp"
             android:text="@string/add_list_theme_title"
             android:textAppearance="@style/body1"
+            app:layout_constraintBottom_toTopOf="@id/rv_add_list"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/rv_happy_add_list"
             app:layout_constraintTop_toBottomOf="@id/vp_add_list_maker_card" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_happy_add_list"
+            android:id="@+id/rv_add_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
