--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -52,4 +52,10 @@
         <item name="android:textColor">@color/selector_happy_type_text_color</item>
     </style>
 
+    <!-- Dim Style -->
+    <style name="MakerHelpDialog" parent="@style/Theme.MaterialComponents.Dialog">
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.72</item>
+    </style>
 </resources>
