--- a/app/src/main/res/layout/item_onboarding_choice_theme.xml
+++ b/app/src/main/res/layout/item_onboarding_choice_theme.xml
@@ -1,41 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingHorizontal="10dp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/iv_theme_background"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:background="@drawable/shape_gray0_fill_gray200_stroke_100_circle"
-        android:layout_marginHorizontal="18dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+    <data>
 
-    <ImageView
-        android:id="@+id/iv_theme_icon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        app:layout_constraintTop_toTopOf="@id/iv_theme_background"
-        app:layout_constraintBottom_toBottomOf="@id/iv_theme_background"
-        app:layout_constraintStart_toStartOf="@id/iv_theme_background"
-        app:layout_constraintEnd_toEndOf="@id/iv_theme_background" />
+        <variable
+            name="item"
+            type="com.sopetit.softie.domain.entity.Theme" />
 
-    <TextView
-        android:id="@+id/tv_theme_name"
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/theme_text"
-        android:textAppearance="@style/caption1"
-        android:textColor="@color/gray500"
-        android:layout_marginTop="9dp"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintTop_toBottomOf="@id/iv_theme_background"
-        app:layout_constraintStart_toStartOf="@id/iv_theme_background"
-        app:layout_constraintEnd_toEndOf="@id/iv_theme_background"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:paddingHorizontal="10dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/iv_theme_background"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/shape_gray0_fill_gray200_stroke_100_circle"
+            android:layout_marginHorizontal="18dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+            android:id="@+id/iv_theme_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toTopOf="@id/iv_theme_background"
+            app:layout_constraintBottom_toBottomOf="@id/iv_theme_background"
+            app:layout_constraintStart_toStartOf="@id/iv_theme_background"
+            app:layout_constraintEnd_toEndOf="@id/iv_theme_background" />
+
+        <TextView
+            android:id="@+id/tv_theme_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{item.name}"
+            android:textAppearance="@style/caption1"
+            android:textColor="@color/gray500"
+            android:layout_marginTop="9dp"
+            android:layout_marginBottom="30dp"
+            app:layout_constraintTop_toBottomOf="@id/iv_theme_background"
+            app:layout_constraintStart_toStartOf="@id/iv_theme_background"
+            app:layout_constraintEnd_toEndOf="@id/iv_theme_background"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
