--- a/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
+++ b/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
@@ -29,6 +29,9 @@
             android:layout_marginTop="34dp"
             android:layout_marginBottom="34dp"
             android:overScrollMode="never"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="vertical"
+            android:foregroundGravity="center"
             app:layout_constraintBottom_toTopOf="@id/btn_onboarding_choice_theme"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
