--- a/app/src/main/res/layout/item_onboarding_choice_theme.xml
+++ b/app/src/main/res/layout/item_onboarding_choice_theme.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -11,42 +12,46 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="10dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/iv_theme_background"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:background="@drawable/shape_gray0_fill_gray200_stroke_100_circle"
-            android:layout_marginHorizontal="18dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-        <ImageView
-            android:id="@+id/iv_theme_icon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            app:layout_constraintTop_toTopOf="@id/iv_theme_background"
-            app:layout_constraintBottom_toBottomOf="@id/iv_theme_background"
-            app:layout_constraintStart_toStartOf="@id/iv_theme_background"
-            app:layout_constraintEnd_toEndOf="@id/iv_theme_background" />
-
-        <TextView
-            android:id="@+id/tv_theme_name"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_theme_background"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{item.name}"
-            android:textAppearance="@style/caption1"
-            android:textColor="@color/gray500"
-            android:layout_marginTop="9dp"
-            android:layout_marginBottom="30dp"
-            app:layout_constraintTop_toBottomOf="@id/iv_theme_background"
-            app:layout_constraintStart_toStartOf="@id/iv_theme_background"
-            app:layout_constraintEnd_toEndOf="@id/iv_theme_background"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            android:background="@drawable/shape_gray0_fill_gray200_stroke_99_rect"
+            android:layout_marginVertical="4dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <ImageView
+                android:id="@+id/iv_theme_icon"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_marginStart="20dp"
+                app:layout_constraintTop_toTopOf="@id/tv_theme_name"
+                app:layout_constraintBottom_toBottomOf="@id/tv_theme_name"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_theme_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/body1"
+                android:text="@{item.name}"
+                android:textColor="@color/gray700"
+                android:layout_marginStart="6dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginVertical="14dp"
+                app:layout_constraintStart_toEndOf="@id/iv_theme_icon"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:text="좋은 관계 만들기" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
